IE6 compatibility, this could be seperated because only IE6 needs it but there is no way to do this atm and this has no side effects for other browser I tested (IE7/FF3/Safari3) so let's go this way

--- a/uni_form/media/uni_form/uni-form-generic.css
+++ b/uni_form/media/uni_form/uni-form-generic.css
@@ -7,7 +7,7 @@
 .uniForm{ margin: 0; padding: 0; position: relative; z-index: 1; } /* reset stuff */
 
   /* Some generals and more resets */
-  .uniForm fieldset{ border: none; margin: 0; padding: 0; }
+  .uniForm fieldset{ border: none; margin: 0; padding: 0; position: relative; }
     .uniForm fieldset legend{ margin: 0; padding: 0; }
 
     /* This is the main unit that contains our form elements */
